# itp-project

./: .gitignore  README.md  _CoqProject  colog.opam  dune-project  everything.v
scripts/: datalog-preprocessing.sc
src/: ce_api.ml  ce_syntax.mlg  coutils.ml  dune  prolog.ml  resolution.ml  smt.ml  term.ml
theories/: CoLog.v  dune
