opam-version: "2.0"
maintainer: "Simon Guilloud"
version: "dev"

homepage: "https://github.com/SimonGuilloud/orthologic-coq"
dev-repo: "git+https://github.com/SimonGuilloud/orthologic-coq.git"
bug-reports: "https://github.com/SimonGuilloud/orthologic-coq/issues"
license: "CC-BY-4.0"

synopsis: "A plugin to add orthologic-based tactics to Coq"
description: """
Orthologic-based reasoning is super great. 
This plugin proposes a verified and optimized implementation of orthologic proof search, with memoization and pointer equality.
It also provides an ocaml-based tactic that computes orthologic normal form, and a boolean tautology solver
based on it."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.8"}
  "coq" {= "8.18.0"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:orthologic"
  "logpath:OLCoq"
]

authors: [
  "Simon Guilloud"
  "Clément Pit-Claudel"
]