opam-version: "2.0"
maintainer: "Sankalp Gambhir, Auguste Poiroux"
version: "dev"

homepage: "https://github.com/sankalpgambhir/itp-project"
dev-repo: "git+https://github.com/sankalpgambhir/itp-project.git"
bug-reports: "https://github.com/sankalpgambhir/itp-project/issues"
license: "Apache-2.0"

synopsis: "A Coq plugin for automating proofs involving inductive relations using Constrained Horn Clauses"
description: """
This plugin establishes a connection between inductively defined propositions in Coq and
Constrained Horn Clauses (CHCs), developing tactics that leverage established proof search techniques
from the CHC literature to automate inductive proofs.

It provides an extensible framework that handles both first-order relations and integrates
theory reasoning, implementing specialized tactics that prune proof search based on constraint validity.

The plugin provides two main tactics:
- chc_auto: Programmatically composes existing Coq tactics through proof tree search
- hornres: Explicitly constructs Horn clauses from inductive definitions and performs
  Prolog-like proof search independent of Coq's tactic system"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.8"}
  "coq" {= "8.20.1"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:inductive"
  "logpath:Inductive"
]

authors: [
  "Sankalp Gambhir"
  "Auguste Poiroux"
]
